--- a/Checkbox/css/checkbox.css
+++ b/Checkbox/css/checkbox.css
@@ -1,31 +1,29 @@
-.button-toggle,
-.button-toggle::before {
+.checkbox > input[type=checkbox] {
+    visibility: hidden;
+}
+
+.checkbox {
+    position: relative;
+    background-color: #333;
+    border-radius: 40px;
+    width: 160px;
+    height: 80px;
+}
+
+.checkbox > label {
     display: block;
-    width: 150px;
-    height: 60px;
+    position: absolute;
+    width: 78px;
+    height: 78px;
+    top: 1px;
+    left: 1px;
+    border-radius: 50%;
+    background-color: red;
     cursor: pointer;
-    border-radius: 5px;
-    text-align: center;
-    color: #FFF;
-    font-weight: bold;
-    border: 2px solid #333;
+    transition: all .25s ease-in;
 }
 
-.button-toggle::before {
-    box-shadow: -3px 3px 10px #333,
-        0 2px 10px #eee inset,
-        0 -2px 10px #333 inset;
-    line-height: 55px;
-}
-
-.button-toggle::before {
-    content: 'OFF';
-    background: red;
-    transition: all .3s ease-in-out;
-}
-
-.button-toggle:checked::before {
-    content: 'ON';
-    background: green;
-    transition: all .3s ease-in-out;    
+.checkbox > input[type=checkbox]:checked + label {
+    left: 81px;
+    background-color: lime;
 }
