--- a/Checkbox/css/checkbox.css
+++ b/Checkbox/css/checkbox.css
@@ -3,27 +3,33 @@
 }
 
 .checkbox {
+    display: inline-block;
     position: relative;
-    background-color: #333;
+    background: linear-gradient(#85B705,#9BD805);
+    box-shadow: 0 3px 15px #222 inset;
     border-radius: 40px;
-    width: 160px;
-    height: 80px;
+    width: 110px;
+    height: 50px;
+    overflow: hidden;
 }
 
 .checkbox > label {
     display: block;
     position: absolute;
-    width: 78px;
-    height: 78px;
-    top: 1px;
-    left: 1px;
+    width: 46px;
+    height: 46px;
+    top: 2px;
+    left: 2px;
     border-radius: 50%;
-    background-color: red;
+    background-color: #eee;
     cursor: pointer;
     transition: all .25s ease-in;
+    box-shadow: 0 0 10px #333,
+        0 0 10px #fff inset,
+        0 -5px 20px #333 inset;
+    z-index: 1;
 }
 
 .checkbox > input[type=checkbox]:checked + label {
-    left: 81px;
-    background-color: lime;
+    left: 62px;
 }
