--- a/Checkbox/css/layout.css
+++ b/Checkbox/css/layout.css
@@ -22,6 +22,10 @@ body {
     text-align: center;
 }
 
+.container .checkbox {
+    margin: 0 auto;
+}
+
 .container > h1 {
     font-size: 14px;
     display: block;
