--- a/Checkbox/css/checkbox.css
+++ b/Checkbox/css/checkbox.css
@@ -2,15 +2,27 @@
     visibility: hidden;
 }
 
+.checkbox,
+.checkbox > div {
+    border-radius: 25px;
+    width: 110px;
+    height: 50px;
+}
+
 .checkbox {
     display: inline-block;
     position: relative;
-    background: linear-gradient(#85B705,#9BD805);
-    box-shadow: 0 3px 15px #222 inset;
-    border-radius: 40px;
-    width: 110px;
-    height: 50px;
+    background-color: transparent;
     overflow: hidden;
+}
+
+.checkbox > div {
+    box-shadow: 0 3px 15px #222 inset;
+    position: absolute;
+    top: 0;
+    z-index: 0;
+    transition: all .25s ease-in;
+    background-color: #CCC;
 }
 
 .checkbox > label {
@@ -27,9 +39,13 @@
     box-shadow: 0 0 10px #333,
         0 0 10px #fff inset,
         0 -5px 20px #333 inset;
-    z-index: 1;
+    z-index: 2;
 }
 
-.checkbox > input[type=checkbox]:checked + label {
+.checkbox > input[type=checkbox]:checked ~ label {
     left: 62px;
+}
+
+.checkbox > input[type=checkbox]:checked ~ div {
+    background: #9BD805;
 }
